--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "cypress": "^13.16.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
