--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "async-mutex": "^0.5.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "country-region-data": "^3.1.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
