--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "country-region-data": "^3.1.0",
+    "motion": "^11.17.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
