--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "cookies-next": "^5.1.0",
     "country-region-data": "^3.1.0",
+    "lucide-react": "^0.474.0",
     "motion": "^11.17.0",
     "next": "15.0.3",
     "react": "^18.2.0",
