--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -17,7 +18,6 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
-    "cookies-next": "^5.1.0",
     "country-region-data": "^3.1.0",
     "lucide-react": "^0.474.0",
     "motion": "^11.17.0",
@@ -31,10 +31,12 @@
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
@@ -42,9 +44,12 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8.4.49",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
