--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20.17.19",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/redux-mock-store": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "cypress": "^13.17.0",
@@ -49,6 +50,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.13",
     "postcss": "^8.5.2",
+    "redux-mock-store": "^1.5.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
