--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node-fetch": "^2.6.12",
     "cypress": "^13.17.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.13",
+    "node-fetch": "^3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
